--- a/src/app/components/sign-in/sign-in.component.html
+++ b/src/app/components/sign-in/sign-in.component.html
@@ -2,6 +2,13 @@
   <div class="displayTableCell">
     <div class="authBlock">
       <h3>Sign In</h3>
+      <!-- calling afauth from AuthService -->
+      <div class="formGroup">
+        <button type="button" class="btn googleBtn" >
+          <!-- <i class="fab fa-google-plus-g"></i> -->
+         <span class="redirect" routerLink="/log-in">Log in with Email</span> 
+        </button>
+      </div>
       <!-- Calling GoogleAuth Api from AuthService -->
       <div class="formGroup">
         <button type="button" class="btn googleBtn" (click)="authService.GoogleAuth()">
