--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!-- Top navigation -->
 <nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
-    <a class="navbar-brand col-sm-3 col-md-2 mr-0" routerLink="/register-student">
+    <a class="navbar-brand col-sm-3 col-md-2 mr-0" routerLink="/dashboard">
         <span class="dasboard-text">Dashboard</span>
     </a>
 </nav>
@@ -11,6 +11,11 @@
         <nav class="col-md-2 d-md-block bg-light sidebar">
             <div class="sidebar-sticky">
                 <ul class="nav flex-column">
+                     <li class="nav-item">
+                        <a class="nav-link" routerLink="/dashboard" routerLinkActive="active">
+                            <i class="fas fa-home"></i>User Details
+                        </a>
+                    </li>
 
                     <!-- routerLink="/register-student" to navigate to view-students component -->
                     <li class="nav-item">
@@ -23,7 +28,7 @@
                     <!-- routerLinkActive="active" activates active class for component-->
                     <li class="nav-item">
                         <a class="nav-link" routerLink="/view-lecturer-checkins" routerLinkActive="active">
-                            <i class="fas fa-list-ul"></i>Lecturer Checkins
+                            <i class="fas fa-list-ul"></i>Lecture Checkins
                         </a>
                     </li>
                 </ul>
