added links to forgot password field

--- a/src/app/components/sign-up/sign-up.component.html
+++ b/src/app/components/sign-up/sign-up.component.html
@@ -50,7 +50,7 @@
     </div>
 
     <div class="redirectToLogin">
-      <span>Already have an account? <span class="redirect" routerLink="/sign-in">Log In</span></span>
+     <span>Already have an account? <span class="redirect" routerLink="/log-in">Log In</span></span>
     </div>
   </div>
 
