--- a/src/app/components/sign-in/sign-in.component.html
+++ b/src/app/components/sign-in/sign-in.component.html
@@ -4,9 +4,9 @@
       <h3>Sign In</h3>
       <!-- calling afauth from AuthService -->
       <div class="formGroup">
-        <button type="button" class="btn googleBtn" >
+        <button type="button" class="btn btnPrimary" >
           <!-- <i class="fab fa-google-plus-g"></i> -->
-         <span class="redirect" routerLink="/log-in">Log in with Email</span> 
+         <span class="redirect" routerLink="log-in" (click)="authService.SignIn(userName.value, userPassword.value)">Log in with Email</span> 
         </button>
       </div>
       <!-- Calling GoogleAuth Api from AuthService -->
@@ -16,6 +16,15 @@
           Log in with Google
         </button>
       </div>
+
+       <div class="forgotPassword">
+        <span routerLink="/forgot-password">Forgot Password?</span>
+      </div>
+    </div>
+
+    <div class="redirectToLogin">
+      <span>Don't have an account?<span class="redirect" routerLink="/register-user"> Sign Up</span></span>
+    </div>
 
   </div>
 </div>
