--- a/src/app/components/verify-email/verify-email.component.html
+++ b/src/app/components/verify-email/verify-email.component.html
@@ -26,7 +26,7 @@
     </div>
 
     <div class="redirectToLogin">
-      <span>Go back to?<span class="redirect" routerLink="/sign-in"> Sign in</span></span>
+      <span>Go back to?<span class="redirect" routerLink="/sign-in"> Sign up</span></span>  <!-- changed it to sign up--> <!--find classs redirect to login-->
     </div>
 
   </div>
