--- a/src/app/components/add-lecturer-checkin/add-lecturer-checkin.component.html
+++ b/src/app/components/add-lecturer-checkin/add-lecturer-checkin.component.html
@@ -30,7 +30,7 @@
         <div class="col-md-12 mb-3">
           <label>Radius</label>
           <input type="text" formControlName="radius" class="form-control" required>
-          <p *ngIf="radius.touched && radius.invalid" class="error"><sup>*</sup>Provide Radus(M)</p>
+          <p *ngIf="radius.touched && radius.invalid" class="error"><sup>*</sup>Provide Radius(M)</p>
           <p *ngIf="radius.errors?.pattern" class="error"><sup>*</sup>Use numbers only
             number</p>
         </div>
