--- a/src/app/components/reports/reports.component.html
+++ b/src/app/components/reports/reports.component.html
@@ -1,5 +1,5 @@
 <!-- Showing checkins data -->
-<div class="table-responsive" >
+<div class="table-responsive" *ngIf="checkins" >
   <h2>Students details</h2>
     <table class="table table-bordered table-responsive-sm table-responsive-md table-responsive-lg">
       <thead>
@@ -11,9 +11,9 @@
       <tbody>
         <!-- *ngFor loop iterates over checkin array and fetch the checkin's data -->
         <!-- paginate pipe will add pagination in checkin's list, it won't show if items are less then 7 -->
-        <tr *ngFor="let checkin of Reports ">
-          <th scope="row">{{admissionNumber}}</th>
-          <td> {{timestamp.toDate() | date}}</td>
+        <tr *ngFor="let checkin of checkins ">
+          <td>{{checkin.admissionNumber}}</td>
+          <td> {{checkin.timestamp.toDate() | date}}</td>
         </tr>
       </tbody>
     </table>
